kubernetes/downloads/radarr-anime/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-anime
  namespace: downloads
spec:
parentRefs:
  - name: internal
    namespace: network
  hostnames:
    - "radarr-anime.whoverse.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: radarr-anime
          port: 7878
